# interface_auto_test

./: .gitignore  BLOCKCHAIN_LONG_CONNECTION_SUMMARY.md  CLEANUP_REPORT.md  FINAL_INTEGRATION_TEST_REPORT.md  FINAL_INTEGRATION_TEST_REPORT_V2.md  GIT_UPLOAD_SOLUTIONS.md  PROJECT_RELEASE.md  PROJECT_SUMMARY.md  README.md  UPLOAD_GUIDE.md  mysql_config_report.md  pyproject.toml  redis_config_report.md  requirements.txt  setup.py  upload.sh  高级功能使用指南.md
config/: blockchain.yaml  default.yaml  tc_004_fixed_config.yaml  test.yaml
docs/: AI测试场景生成指南.md  Django架构对比分析.md  MySQL环境搭建指南.md  Redis环境搭建指南.md  ai_integration_guide.md  test_case_export_guide.md  user_guide.md  使用流程图.md  区块链环境搭建指南.md  区块链长连接指南.md  完整使用文档.md  快速开始指南.md  技术架构文档.md  接口文档格式支持与优化建议.md  测试模式选择指南.md  项目架构图.md  项目流程图.md
examples/: ai_test_scenarios_demo.py  all_examples.py  blockchain_long_connection_demo.py  blockchain_test_demo.py  complete_workflow_demo.md  mock_routes.json  mode_switching_demo.py  mysql_usage_demo.py  persistent_connection_demo.py  petstore.json  redis_usage_demo.py
scripts/: check_sensitive_data.py  cli_integration_test.py  integration_test.py  redis_mysql_integration_test.py  setup_mysql.sh  setup_redis.sh  test_blockchain.py  test_blockchain_connections.py  test_datetime_serialization.py  test_mysql.py  test_redis.py  update_mysql_config.py  update_redis_config.py
src/: __init__.py
src/ai/: __init__.py  ai_chat_assistant.py  ai_completion_manager.py  ai_decision_center.py  ai_test_generator.py  ai_test_reporter.py  deepseek_client.py
src/auth/: auth_manager.py
src/blockchain/: __init__.py  bitcoin_client.py  blockchain_config.py  blockchain_manager.py  connection_manager.py  ethereum_client.py  smart_contract_tester.py  wallet_manager.py
src/cli/: __init__.py  main.py  (+5 more)
tests/: test_example.py  test_pet_store_api.py
(+28 files in other folders)
